[BUILD] init build

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "web-booking",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ken2309.github.io/beautyX/",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
