--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.21.4",
     "date-fns": "^2.28.0",
     "dayjs": "^1.10.7",
+    "firebase": "^9.6.11",
     "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
     "html-react-parser": "^1.4.9",
