--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/reach__router": "^1.3.9",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
+    "@types/react-gallery-carousel": "^0.2.2",
     "axios": "^0.21.4",
     "date-fns": "^2.28.0",
     "dayjs": "^1.11.1",
@@ -36,6 +37,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
+    "react-gallery-carousel": "^0.2.9",
     "react-google-maps": "^9.4.5",
     "react-i18next": "^11.16.7",
     "react-loading-skeleton": "^3.1.0",
