--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.6.0",
+    "@googlemaps/react-wrapper": "^1.1.34",
     "@mui/lab": "^5.0.0-alpha.78",
     "@mui/material": "^5.6.2",
     "@mui/styles": "^5.6.2",
@@ -15,11 +16,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
+    "@types/mapbox-gl": "^2.7.2",
     "@types/node": "^12.20.48",
     "@types/reach__router": "^1.3.9",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.15",
     "@types/react-gallery-carousel": "^0.2.2",
+    "@types/react-map-gl": "^6.1.2",
     "axios": "^0.21.4",
     "date-fns": "^2.28.0",
     "dayjs": "^1.11.1",
@@ -32,6 +35,7 @@
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-xhr-backend": "^3.2.2",
     "lodash": "^4.17.21",
+    "mapbox-gl": "^2.8.2",
     "npm": "^8.7.0",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
@@ -41,6 +45,7 @@
     "react-google-maps": "^9.4.5",
     "react-i18next": "^11.16.7",
     "react-loading-skeleton": "^3.1.0",
+    "react-map-gl": "^7.0.15",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.6",
     "react-router": "^6.0.2",
@@ -82,6 +87,7 @@
     ]
   },
   "devDependencies": {
+    "@types/googlemaps": "^3.43.3",
     "@types/lodash": "^4.14.182",
     "@types/lodash-es": "^4.17.5",
     "@types/react-router-dom": "^5.3.2",
