--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-gallery-carousel": "^0.2.9",
     "react-google-maps": "^9.4.5",
     "react-i18next": "^11.16.7",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-loading-skeleton": "^3.1.0",
     "react-map-gl": "^7.0.15",
     "react-player": "^2.9.0",
