--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/google.maps": "^3.49.2",
     "@types/jest": "^26.0.24",
     "@types/mapbox-gl": "^2.7.2",
     "@types/node": "^12.20.48",
