--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-select-datepicker": "^1.1.2",
     "react-simple-image-slider": "^2.4.1",
     "react-slick": "^0.28.1",
+    "react-swipeable-list": "^1.5.1",
     "redux-toolkit": "^1.1.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
