--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.6.0",
     "@googlemaps/react-wrapper": "^1.1.34",
+    "@momo-miniapp/api": "^0.1.4-beta.8",
     "@mui/lab": "^5.0.0-alpha.78",
     "@mui/material": "^5.6.2",
     "@mui/styles": "^5.6.2",
@@ -52,7 +53,7 @@
     "react-redux": "^7.2.6",
     "react-router": "^6.0.2",
     "react-router-dom": "^5.3.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-select-datepicker": "^1.1.2",
     "react-simple-image-slider": "^2.4.1",
     "react-slick": "^0.28.1",
