--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@mui/lab": "^5.0.0-alpha.78",
         "@mui/material": "^5.6.2",
         "@mui/styles": "^5.6.2",
+        "@react-google-maps/api": "^2.12.1",
         "@reduxjs/toolkit": "^1.6.2",
         "@sentry/react": "^6.19.6",
         "@sentry/tracing": "^6.19.6",
