--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "slick-carousel": "^1.8.1",
         "styled-components": "^5.3.5",
         "typescript": "^4.7.4",
+        "use-places-autocomplete": "^4.0.0",
         "usehooks-ts": "^1.2.0",
         "web-vitals": "^1.1.2",
         "yup": "^0.32.11"
