--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ dist/
 # Compiled Java class files
 *.class
 .next
+.next/
 # Compiled Python bytecode
 *.py[cod]
 
@@ -53,11 +54,11 @@ build/
 .vscode/
 firebase.json
 package-lock.json
-<<<<<<< HEAD
+ 
 .firebase/hosting.YnVpbGQ.cache
 prod/
 .firebase/hosting.YnVpbGQ.cache
-=======
+
 *.cache
-prod/
->>>>>>> b1ada437284a4b4182fa444d41980c72238c254e
+ 
+ 
