--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"redux-toolkit": "^1.1.2",
 		"slick-carousel": "^1.8.1",
 		"styled-components": "^5.3.5",
+		"swr": "^1.3.0",
 		"typescript": "^4.7.4",
 		"use-places-autocomplete": "^4.0.0",
 		"usehooks-ts": "^1.2.0",
