--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"axios": "^0.21.4",
 		"date-fns": "^2.29.1",
 		"dayjs": "^1.11.4",
+		"eslint-config-next": "^12.1.5",
 		"firebase": "^8.9.1",
 		"formik": "^2.2.9",
 		"http-proxy": "^1.18.1",
